Fixing up spacing; need to make everything responsive

--- a/styles.css
+++ b/styles.css
@@ -4,7 +4,11 @@ body {
   /* https://developer.mozilla.org/en-US/docs/Web/CSS/font-family */
   font-size: 14px;
 
+  /* Global margins.*/
   margin-top: 30px;
+  margin-left: 20px;
+
+  display: flex;
 }
 
 /*
@@ -16,11 +20,13 @@ nav {
    *
    * Source: https://developer.mozilla.org/en-US/docs/Web/CSS/float.
    */
-  float: left;
+  /* float: left; */
   /* TODO Read about this property. */
   text-align: left;
-
-  margin-left: 20px;
+  left: 48px;
+  position: sticky;
+  width: 170px;
+  height: 500px;
 }
 
 /*
@@ -38,25 +44,6 @@ nav ul {
   padding: 0;
 }
 
-/* Content container. Used to get the spacing right. */
-#content-container {
-  display: flex;
-  float: right;
-}
-
-/*
- * Main body of content for each page.
- */
 #content {
-  width: 500px;
-}
-
-/* TODO Figure out what the rest of the properties do. */
-#right {
-  height: 1px;
-  min-width: 0;
-  overflow: hidden;
-  width: 200px;
-  margin: 0;
-  padding: 0;
+  width: 540px;
 }
